--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
 @import "_normalize";
 @import "_variables";
 
-/* reset */
+// reset
 
 html {
   box-sizing: border-box;
@@ -14,15 +14,27 @@ html {
   box-sizing: inherit;
 }
 
-/* master */
+// body
 body {
   font-family: 'Rubik', sans-serif;
   background: #FFFFEA;
   background-size: 20px 20px;
   background-image: linear-gradient(to right, #e9f0f0 1px, transparent 1px), linear-gradient(to bottom, #e9f0f0 1px, transparent 1px);
+
+  @media (min-width: 768px) and (orientation: portrait) {
+    font-size: 1.2rem;
+  }
+
+  @media (min-width: 768px) and (orientation: portrait) {
+    font-size: 1.6rem;
+  }
+
+  @media (min-width: 1366px) {
+    font-size: 1.4rem;
+  }
 }
 
-/* main menu */
+/*button menu */
 .menuButton,
 .article__button {
   display: flex;
@@ -41,43 +53,65 @@ body {
   z-index: 2;
 }
 
+.menuButton {
+  &:hover {
+    cursor: pointer;
+  }
+
+  &__line {
+    font-size: 3rem;
+    color: #1a1a1a;
+    transform: rotate(45deg);
+
+    &-on {
+      animation-name: line-on;
+      animation-duration: .6s;
+      animation-fill-mode: both;
+    }
+
+    &-off {
+      animation-name: line-off;
+      animation-duration: .6s;
+      animation-fill-mode: both;
+    }
+  }
+
+  &__switch {
+    &-off {
+      animation-name: switch-off;
+      animation-duration: .6s;
+      animation-fill-mode: both;
+    }
+  }
+
+  &__switch {
+    &-on {
+      animation-name: switch-on;
+      animation-duration: .6s;
+      animation-fill-mode: both;
+    }
+  }
+}
+
 .article__button.article__button-position {
   left: 0;
   transform: rotate(0deg);
 }
 
-.menuButton:hover {
-  cursor: pointer;
-}
-
-.menuButton__line {
-  font-size: 3rem;
-  color: #1a1a1a;
-  transform: rotate(45deg);
-}
-
-.switch__line-off {
-  animation-name: line-off;
+.menu-on {
+  animation-name: menu-on;
   animation-duration: .6s;
   animation-fill-mode: both;
 }
 
-.switch__line-on {
-  animation-name: line-on;
+.menu-off {
+  animation-name: menu-off;
   animation-duration: .6s;
   animation-fill-mode: both;
 }
 
-.menuButton__switch-off {
-  animation-name: button;
-  animation-duration: .6s;
-  animation-fill-mode: both;
-}
-
-.menuButton__switch-on {
-  animation-name: button-on;
-  animation-duration: .6s;
-  animation-fill-mode: both;
+.strong__header {
+  text-transform: uppercase;
 }
 
 @keyframes line-off {
@@ -104,7 +138,7 @@ body {
   }
 }
 
-@keyframes button {
+@keyframes switch-off {
   from {
     background-color: #1a1a1a;
     border-color: #fefefe;
@@ -116,7 +150,7 @@ body {
   }
 }
 
-@keyframes button-on {
+@keyframes switch-on {
   from {
     background-color: #fefefe;
     border-color: #1a1a1a;
@@ -126,33 +160,6 @@ body {
     background-color: #1a1a1a;
     border-color: #fefefe;
   }
-}
-
-.menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: #8B7871;
-  transform: translateX(-100%);
-  padding: 2rem;
-  z-index: 1;
-}
-
-.menu-on {
-  animation-name: menu-on;
-  animation-duration: .6s;
-  animation-fill-mode: both;
-}
-
-.menu-off {
-  animation-name: menu-off;
-  animation-duration: .6s;
-  animation-fill-mode: both;
 }
 
 @keyframes menu-on {
@@ -175,97 +182,322 @@ body {
   }
 }
 
-.menu__section {
-  display: none;
-}
-
-.menu__list {
+// menu
+.menu {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  padding: 8px;
+  justify-content: flex-start;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: #8B7871;
+  transform: translateX(-100%);
+  padding: 2rem;
+  z-index: 1;
+
+  &__header {
+    @media (min-width: 1366px) {
+      text-align: center;
+      margin: 20px 20px;
+    }
+  }
+
+  &__section {
+    display: none;
+
+    @media (min-width: 1024px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      max-width: 600px;
+    }
+
+    @media (min-width: 1366px) {
+      font-size: 1.1rem;
+    }
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 8px;
+
+    @media (min-width: 640px) and (orientation: landscape) {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+
+    @media (min-width: 850px) and (orientation: landscape) {
+      margin: 0;
+    }
+
+    @media (min-width: 1366px) {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 8px;
+    }
+  }
+
+  &__item {
+    margin-top: 1rem;
+    list-style: none;
+
+    @media (min-width: 640px) and (orientation: landscape) {
+      margin: 1rem;
+    }
+
+    @media (min-width: 1366px) {
+      margin: 0;
+    }
+  }
+
+  &__link {
+    font-size: 1.5rem;
+    color: #FFFFEA;
+    text-decoration: none;
+    transition: color .2s linear;
+
+    &:hover {
+      color: rgba(255, 255, 234, 0.7);
+
+      @media (min-width: 1366px) {
+        color: #1a1a1a;
+        background-color: rgba(0, 0, 0, 0.15);
+      }
+    }
+
+    @media (min-width: 640px) and (orientation: landscape) {
+      font-size: 1rem;
+    }
+
+    @media (min-width: 1366px) {
+      display: flex;
+      flex-direction: column;
+      width: 250px;
+      height: 200px;
+      border: 1px solid black;
+      text-decoration: none;
+      text-transform: none;
+      color: black;
+      padding: 10px;
+      transition: background-color .2s linear;
+    }
+  }
+
+  &__description {
+    display: none;
+
+    @media (min-width: 1366px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      height: auto;
+      line-height: 1.4rem;
+      padding: 0;
+      margin: 10px;
+      transform: none;
+    }
+  }
+
+  &__text {
+    @media (min-width: 1366px) {
+      max-width: 800px;
+      width: 100%;
+      margin: 20px auto;
+      text-align: center;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    align-items: center;
+  }
 }
 
-.menu__item {
-  margin-top: 1rem;
-  list-style: none;
-}
-
-.menu__link {
-  font-size: 1.5rem;
-  color: #FFFFEA;
-  text-decoration: none;
-  transition: color .2s linear;
-}
-
-.menu__link:hover {
-  color: rgba(255, 255, 234, 0.7)
-}
-
-.menu__description {
-  display: none;
-}
-
-.strong__header {
-  text-transform: uppercase;
-}
-
-/* hero */
+// hero
 .hero {
   padding: 8px;
   text-align: center;
+
+  &__header {
+    font-size: 2rem;
+    padding: 40px;
+    text-align: center;
+    animation: 200ms 500ms linear both heroHeader;
+    margin: 0;
+
+    @media (min-width: 1024px) {
+      font-size: 3rem;
+    }
+
+    @media (min-width: 1366px) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 3rem;
+    }
+
+    &::after {
+      content: " </>";
+      display: flex;
+      justify-content: center;
+      margin-top: 8px;
+      transform: rotate(15deg);
+      background: -webkit-linear-gradient(#eee, #333);
+      background-clip: text;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+
+      @media (min-width: 1366px) {
+        margin: 20px;
+      }
+    }
+  }
+
+  @media (min-width: 1366px) {
+    background: rgb(78, 204, 111);
+    background: -moz-radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 62%);
+    background: -webkit-radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 62%);
+    background: radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 60%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4ecc6f", endColorstr="#ffffff", GradientType=1);
+  }
 }
 
-.hero__header {
-  font-size: 2rem;
-  padding: 40px;
-  text-align: center;
-  animation: 200ms 500ms linear both heroHeader;
-  margin: 0;
+@keyframes heroHeader {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
-.hero__header::after {
-  content: " </>";
-  display: flex;
-  justify-content: center;
-  margin-top: 8px;
-  transform: rotate(15deg);
-  background: -webkit-linear-gradient(#eee, #333);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
+// article
+.article {
+  &__header {
+    padding: 8px;
+    text-align: center;
 
-.article__nav {
-  position: sticky;
-  top: 0;
-  left: 0;
-}
+    @media (min-width: 1366px) {
+      margin: 20px 20px;
+    }
+  }
 
-.article__list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 0;
-  margin-top: 0;
-  padding: 8px;
-  list-style: none;
-  background: #ffa07a;
-  overflow: hidden;
-  transform: scaleY(0);
-  transform-origin: top;
-  transition: transform 0.3s ease-out;
-}
+  &__nav {
+    position: sticky;
+    top: 0;
+    left: 0;
+  }
 
-.article__list-on {
-  height: auto;
-  transform: scaleY(1);
-}
+  &__menu {
+    @media (min-width: 1366px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+  }
 
-.article__list-off {
-  animation-name: articleList-off;
-  animation-duration: .6s;
-  animation-fill-mode: both;
+  &__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 0;
+    margin-top: 0;
+    padding: 8px;
+    list-style: none;
+    background: #ffa07a;
+    overflow: hidden;
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform 0.3s ease-out;
+
+    &::after {
+      @media (min-width: 1366px) {
+        content: "\25BA";
+        display: block;
+        font-size: 2rem;
+        margin-left: 30px;
+        transform: rotate(180deg);
+        animation: heroHeader 1s linear 1.5s infinite alternate both;
+      }
+    }
+
+    @media (min-width: 1366px) {
+      flex-direction: row;
+      justify-content: center;
+      width: 100%;
+      max-width: 1100px;
+      height: auto;
+      padding: 0;
+      margin: 10px;
+      transform: none;
+    }
+  }
+
+  &__list-on {
+    height: auto;
+    transform: scaleY(1);
+  }
+
+  &__list-off {
+    animation-name: articleList-off;
+    animation-duration: .6s;
+    animation-fill-mode: both;
+  }
+
+  &__item {
+    width: 100%;
+
+    @media (min-width: 1366px) {
+      width: auto;
+    }
+  }
+
+  &__link {
+    display: block;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: black;
+    padding: 8px;
+    text-align: center;
+    transition: background-color .2s linear;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.15);
+
+      @media (min-width: 1366px) {
+        color: #1a1a1a;
+      }
+    }
+  }
+
+  &__paragraph {
+    padding: 16px;
+    text-align: center;
+
+    @media (min-width: 1366px) {
+      max-width: 800px;
+      width: 100%;
+      margin: 20px auto;
+    }
+  }
+
+  &__button {
+    @media (min-width: 1366px) {
+      display: none;
+    }
+  }
+
+  @media (min-width: 1366px) {
+    font-size: 1.2rem;
+  }
 }
 
 @keyframes articleList-on {
@@ -292,376 +524,188 @@ body {
   }
 }
 
-.article__item {
-  width: 100%;
-}
-
-.article__link {
-  display: block;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: black;
-  padding: 8px;
-  text-align: center;
-  transition: background-color .2s linear;
-}
-
-.article__link:hover {
-  background-color: rgba(0, 0, 0, 0.15);
-}
-
-.article__header {
-  padding: 8px;
-  text-align: center
-}
-
-.article__paragraph,
+// section
 .section {
-  padding: 16px;
+  &__header {
+    @media (min-width: 1366px) {
+      margin: 8px 0;
+    }
+  }
+
+  &__paragraph {
+    @media (min-width: 1366px) {
+      margin: 8px 0;
+
+      &-position {
+        @media (min-width: 1366px) {
+          text-align: center;
+        }
+      }
+    }
+  }
+
+  &__list {
+    @media (min-width: 1366px) {
+      margin: 10px 10px 10px 30px;
+    }
+  }
+
+  &__code {
+    display: block;
+    background: #C0D3D3;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    padding: 16px;
+    font-size: 0.8rem;
+
+    @media (min-width: 1366px) {
+      display: inline-block;
+      font-size: 1rem;
+    }
+  }
+
+  &__link {
+    display: block;
+    margin: 8px;
+  }
+
+  @media (min-width: 1366px) {
+    padding-top: 86px;
+    margin-bottom: 40px;
+  }
 }
 
-.article__paragraph {
-  text-align: center;
-}
-
-.section__code,
-.card__code {
-  display: block;
-  background: #C0D3D3;
-  margin-top: 8px;
-  margin-bottom: 8px;
-  padding: 16px;
-  font-size: 0.8rem;
-}
-
-.card__link,
-.section__link {
-  display: block;
-  margin: 8px;
-}
+// card
 
 .card {
   padding: 8px;
   margin: 4px;
   border: 1px solid black;
   border-radius: 4px;
+
+  &__header {
+    color: #4ECC6F;
+  }
+
+  &__link {
+    display: block;
+    margin: 8px;
+  }
+
+  &__code {
+    display: block;
+    background: #C0D3D3;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    padding: 16px;
+    font-size: 0.8rem;
+
+    @media (min-width: 1366px) {
+      display: inline-block;
+      font-size: 1rem;
+    }
+  }
+
+  &__paragraph {
+    @media (min-width: 1366px) {
+      margin: 10px 0;
+    }
+  }
+
+  &__list {
+    @media (min-width: 1366px) {
+      margin: 10px 10px 10px 30px;
+    }
+  }
+
+  @media (min-width: 1366px) {
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+  }
 }
 
-.card__header {
-  color: #4ECC6F;
-}
-
-.image {
-  display: block;
-  width: 100%;
-  margin: 8px auto;
-  padding: 8px;
-}
-
-.wrong {
-  color: red;
-}
-
+// table
 .table {
   width: 100%;
   border: 1px solid black;
   margin: 20px auto;
   text-align: center;
   border-collapse: collapse;
-}
 
-.table__caption {
-  text-align: center;
-  border: 1px solid black;
-  background: #BFBFB0;
-  padding: 10px;
-}
-
-.table__cell {
-  padding: 10px;
-}
-
-.table__cell:nth-child(1) {
-  border-right: 1px solid black;
-}
-
-.table__head .table__cell {
-  border: 1px solid black;
-}
-
-.table__cell.table__cell--truthy {
-  background: #B2CCA7;
-}
-
-.table__cell.table__cell--falsy {
-  background: #A7A9CC;
-}
-
-@keyframes heroHeader {
-  from {
-    opacity: 0;
+  &__head {
+    border: 1px solid black;
   }
 
-  to {
-    opacity: 1;
+  &__caption {
+    text-align: center;
+    border: 1px solid black;
+    background: #BFBFB0;
+    padding: 10px;
+  }
+
+  &__cell {
+    padding: 10px;
+    border: 1px solid black;
+
+    &:nth-child(1) {
+      border-right: 1px solid black;
+    }
+
+    &--falsy {
+      background: #A7A9CC;
+    }
+
+    &--truthy {
+      background: #B2CCA7;
+    }
   }
 }
 
-/* footer */
+// footer
 .footer {
   padding: 24px;
   text-align: center;
   font-size: 1rem;
   background: #8B7871;
-}
 
-.footer__paragraph {
-  margin: 0 80px;
-}
-
-@media (min-width: 640px) and (orientation: landscape) {
-  .menu__list {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  &__paragraph {
+    margin: 0 80px;
   }
 
-  .menu__item {
-    margin: 1rem;
-  }
-
-  .menu__link {
-    font-size: 1rem;
-  }
-}
-
-@media (min-width: 768px) and (orientation: portrait) {
-  body {
-    font-size: 1.2rem;
-  }
-}
-
-@media (min-width: 1024px) {
-  .menu {
-    align-items: center;
-  }
-
-  .menu__section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: 600px;
-  }
-
-  .hero__header {
-    font-size: 3rem;
-  }
-}
-
-@media (min-width: 768px) and (orientation: portrait) {
-
-  body,
-  .footer {
+  @media (min-width: 768px) and (orientation: portrait) {
     font-size: 1.6rem;
   }
-}
 
-@media (min-width: 850px) and (orientation: landscape) {
-
-  .menu__list {
-    margin: 0;
-  }
-}
-
-@media (min-width: 1366px) {
-  body {
-    font-size: 1.4rem;
-  }
-
-  .hero {
-    background: rgb(78, 204, 111);
-    background: -moz-radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 62%);
-    background: -webkit-radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 62%);
-    background: radial-gradient(circle, rgba(78, 204, 111, 1) 0%, rgba(255, 255, 255, 0) 60%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4ecc6f", endColorstr="#ffffff", GradientType=1);
-  }
-
-  .hero__header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 3rem;
-    padding: 40px;
-    text-align: center;
-    animation: 200ms 500ms linear both heroHeader;
-    margin: 0;
-  }
-
-  .hero__header::after {
-    margin: 20px;
-  }
-
-  .article__button {
-    display: none;
-  }
-
-  .wrapper {
-    max-width: 1100px;
-    width: 100%;
-    margin: 0 auto;
-  }
-
-  .article__menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-
-  .article__list {
-    width: 100%;
-    max-width: 1100px;
-  }
-
-  .menu__section {
-    font-size: 1.1rem;
-  }
-
-  .menu__list {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 8px;
-  }
-
-  .menu__description,
-  .article__list {
-    display: flex;
-    flex-direction: row;
-    height: auto;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    margin: 10px;
-    transform: none;
-  }
-
-  .menu__description {
-    flex-direction: column;
-    align-items: flex-start;
-    line-height: 1.4rem;
-  }
-
-  .menu__item {
-    margin: 0;
-  }
-
-  .menu__link,
-  .article__link {
-    display: block;
-    text-decoration: none;
-    text-transform: uppercase;
-    color: black;
-    padding: 10px;
-    transition: background-color .2s linear;
-  }
-
-  .menu__link {
-    display: flex;
-    flex-direction: column;
-    width: 250px;
-    height: 200px;
-    border: 1px solid black;
-    text-transform: none;
-  }
-
-  .menu__link:hover,
-  .article__link:hover {
-    color: #1a1a1a;
-    background-color: rgba(0, 0, 0, 0.15);
-  }
-
-  .article__list::after {
-    content: "\25BA";
-    display: block;
+  @media (min-width: 1366px) {
     font-size: 2rem;
-    margin-left: 30px;
-    transform: rotate(180deg);
-    animation: heroHeader 1s linear 1.5s infinite alternate both;
   }
 
-  .article {
-    font-size: 1.2rem;
-  }
+}
 
-  .article__item {
-    width: auto;
-  }
+// others
+.image {
+  display: block;
+  width: 100%;
+  margin: 8px auto;
+  padding: 8px;
 
-  .menu__text,
-  .article__paragraph {
-    max-width: 800px;
-    width: 100%;
-    margin: 20px auto;
-    text-align: center;
-  }
-
-  .menu__header,
-  .article__header {
-    text-align: center;
-    margin: 20px 20px;
-  }
-
-  .section {
-    padding-top: 86px;
-    margin-bottom: 40px;
-  }
-
-
-  .section__header {
-    margin: 10px 0;
-  }
-
-  .section__paragraph,
-  .card__paragraph {
-    margin: 10px 0;
-  }
-
-  .section__list,
-  .card__list {
-    margin: 10px 10px 10px 30px;
-  }
-
-  .section__code,
-  .card__code {
-    display: inline-block;
-    font-size: 1rem;
-  }
-
-  .card {
-    padding: 10px;
-    margin: 5px;
-    border: 1px solid black;
-    border-radius: 5px;
-  }
-
-  .card__header {
-    color: #4ECC6F;
-  }
-
-  .image {
-    display: block;
+  @media (min-width: 1366px) {
     width: auto;
     max-width: 1100px;
     margin: 10px auto;
     padding: 10px;
   }
+}
 
-  .section__paragraph.section__paragraph-position {
-    text-align: center;
-  }
+.wrong {
+  color: red;
+}
 
-  .footer {
-    font-size: 2rem;
+@media (min-width: 1366px) {
+  .wrapper {
+    max-width: 1100px;
+    width: 100%;
+    margin: 0 auto;
   }
 }
