--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -226,6 +226,12 @@ body {
     align-items: flex-start;
     padding: 8px;
 
+    @media (min-width: 568px) and (orientation: landscape) {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+
     @media (min-width: 640px) and (orientation: landscape) {
       flex-direction: row;
       flex-wrap: wrap;
@@ -257,7 +263,7 @@ body {
   }
 
   &__link {
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: #FFFFEA;
     text-decoration: none;
     transition: color .2s linear;
@@ -269,6 +275,10 @@ body {
         color: #1a1a1a;
         background-color: rgba(0, 0, 0, 0.15);
       }
+    }
+
+    @media (min-width: 360px) and (orientation: portrait) {
+      font-size: 1.2rem;
     }
 
     @media (min-width: 640px) and (orientation: landscape) {
@@ -526,7 +536,11 @@ body {
 
 // section
 .section {
+  margin: 8px;
+
   &__header {
+    margin: 8px;
+
     @media (min-width: 1366px) {
       margin: 8px 0;
     }
@@ -567,6 +581,7 @@ body {
   &__link {
     display: block;
     margin: 8px;
+    word-break: break-all;
   }
 
   @media (min-width: 1366px) {
@@ -579,7 +594,7 @@ body {
 
 .card {
   padding: 8px;
-  margin: 4px;
+  margin: 8px;
   border: 1px solid black;
   border-radius: 4px;
 
@@ -590,6 +605,11 @@ body {
   &__link {
     display: block;
     margin: 8px;
+    word-break: break-all;
+  }
+
+  &__list {
+    word-break: break-word;
   }
 
   &__code {
@@ -599,6 +619,7 @@ body {
     margin-bottom: 8px;
     padding: 16px;
     font-size: 0.8rem;
+    word-break: break-word;
 
     @media (min-width: 1366px) {
       display: inline-block;
@@ -627,6 +648,7 @@ body {
 
 // table
 .table {
+  table-layout: fixed;
   width: 100%;
   border: 1px solid black;
   margin: 20px auto;
@@ -671,6 +693,24 @@ body {
 
   &__paragraph {
     margin: 0 80px;
+  }
+
+  @media (min-width: 360px) and (orientation: portrait) {
+    padding: 32px;
+    font-size: 1.2rem;
+  }
+
+  @media (min-width: 568px) and (orientation: landscape) {
+    font-size: 1.5rem;
+  }
+
+  @media (min-width: 640px) and (orientation: landscape) {
+    padding: 32px;
+    font-size: 1.8rem;
+  }
+
+  @media (min-width: 730px) and (orientation: landscape) {
+    padding: 32px;
   }
 
   @media (min-width: 768px) and (orientation: portrait) {
