--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -63,13 +63,13 @@ body {
     color: #1a1a1a;
     transform: rotate(45deg);
 
-    &-on {
+    &--on {
       animation-name: line-on;
       animation-duration: .6s;
       animation-fill-mode: both;
     }
 
-    &-off {
+    &--off {
       animation-name: line-off;
       animation-duration: .6s;
       animation-fill-mode: both;
@@ -77,7 +77,7 @@ body {
   }
 
   &__switch {
-    &-off {
+    &--off {
       animation-name: switch-off;
       animation-duration: .6s;
       animation-fill-mode: both;
@@ -85,7 +85,7 @@ body {
   }
 
   &__switch {
-    &-on {
+    &--on {
       animation-name: switch-on;
       animation-duration: .6s;
       animation-fill-mode: both;
@@ -93,7 +93,7 @@ body {
   }
 }
 
-.article__button.article__button-position {
+.article__button.article__button--position {
   left: 0;
   transform: rotate(0deg);
 }
@@ -428,6 +428,17 @@ body {
     transform-origin: top;
     transition: transform 0.3s ease-out;
 
+    &--on {
+      height: auto;
+      transform: scaleY(1);
+    }
+
+    &--off {
+      animation-name: articleList-off;
+      animation-duration: .6s;
+      animation-fill-mode: both;
+    }
+
     &::after {
       @media (min-width: 1366px) {
         content: "\25BA";
@@ -449,17 +460,6 @@ body {
       margin: 10px;
       transform: none;
     }
-  }
-
-  &__list-on {
-    height: auto;
-    transform: scaleY(1);
-  }
-
-  &__list-off {
-    animation-name: articleList-off;
-    animation-duration: .6s;
-    animation-fill-mode: both;
   }
 
   &__item {
@@ -550,7 +550,7 @@ body {
     @media (min-width: 1366px) {
       margin: 8px 0;
 
-      &-position {
+      &--position {
         @media (min-width: 1366px) {
           text-align: center;
         }
