--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -614,6 +614,22 @@ body {
     }
   }
 
+  &__resp-container {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    transform: scale(0.9);
+  }
+
+  &__resp-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+
   @media (min-width: 1366px) {
     padding-top: 86px;
     margin-bottom: 40px;
