adds 'Prism' - test

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -785,6 +785,12 @@ body {
 }
 
 // others
+code[class*=language-],
+pre[class*=language-] {
+  margin: 16px;
+  white-space: pre-line;
+}
+
 .image {
   display: block;
   width: 100%;
