--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -447,7 +447,7 @@ body {
     position: sticky;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 2;
   }
 
   &__menu {
@@ -516,7 +516,7 @@ body {
   }
 
   &__link {
-    display: inline-block;
+    display: block;
     text-decoration: none;
     text-transform: uppercase;
     color: black;
