--- a/css/main.css
+++ b/css/main.css
@@ -308,6 +308,112 @@ template {
 [hidden] {
   display: none; }
 
+/* PrismJS 1.16.0
+https://prismjs.com/download.html#themes=prism-okaidia&languages=markup+css+clike+javascript */
+/**
+ * okaidia theme for JavaScript, CSS and HTML
+ * Loosely based on Monokai textmate theme by http://www.monokai.nl/
+ * @author ocodia
+ */
+code[class*="language-"],
+pre[class*="language-"] {
+  color: #f8f8f2;
+  background: none;
+  text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-size: 1em;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 1.5;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  -webkit-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none; }
+
+/* Code blocks */
+pre[class*="language-"] {
+  padding: 1em;
+  margin: .5em 0;
+  overflow: auto;
+  border-radius: 0.3em; }
+
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  background: #272822; }
+
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+  padding: .1em;
+  border-radius: .3em;
+  white-space: normal; }
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: slategray; }
+
+.token.punctuation {
+  color: #f8f8f2; }
+
+.namespace {
+  opacity: .7; }
+
+.token.property,
+.token.tag,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #f92672; }
+
+.token.boolean,
+.token.number {
+  color: #ae81ff; }
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #a6e22e; }
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string,
+.token.variable {
+  color: #f8f8f2; }
+
+.token.atrule,
+.token.attr-value,
+.token.function,
+.token.class-name {
+  color: #e6db74; }
+
+.token.keyword {
+  color: #66d9ef; }
+
+.token.regex,
+.token.important {
+  color: #fd971f; }
+
+.token.important,
+.token.bold {
+  font-weight: bold; }
+
+.token.italic {
+  font-style: italic; }
+
+.token.entity {
+  cursor: help; }
+
 @-webkit-keyframes line-off {
   from {
     -webkit-transform: rotate(135deg);
@@ -471,6 +577,7 @@ body {
   font-family: 'Rubik', sans-serif;
   background: #FFFFEA;
   background-size: 20px 20px;
+  background-image: -webkit-linear-gradient(left, #e9f0f0 1px, transparent 1px), -webkit-linear-gradient(top, #e9f0f0 1px, transparent 1px);
   background-image: -o-linear-gradient(left, #e9f0f0 1px, transparent 1px), -o-linear-gradient(top, #e9f0f0 1px, transparent 1px);
   background-image: linear-gradient(to right, #e9f0f0 1px, transparent 1px), linear-gradient(to bottom, #e9f0f0 1px, transparent 1px); }
   @media (min-width: 768px) and (orientation: portrait) {
@@ -807,6 +914,8 @@ body {
   @media (min-width: 1366px) {
     .hero {
       background: #4ecc6f;
+      background: -webkit-radial-gradient(circle, #4ecc6f 0%, rgba(255, 255, 255, 0) 62%);
+      background: -webkit-radial-gradient(circle, #4ecc6f 0%, rgba(255, 255, 255, 0) 60%);
       background: -o-radial-gradient(circle, #4ecc6f 0%, rgba(255, 255, 255, 0) 60%);
       background: radial-gradient(circle, #4ecc6f 0%, rgba(255, 255, 255, 0) 60%);
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4ecc6f", endColorstr="#ffffff", GradientType=1); } }
