--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import "_normalize";
 @import "_variables";
 @import "_prism";
+@import "_dev-tools";
 @import url('https://fonts.googleapis.com/css?family=Rubik:400,700&display=swap&subset=latin-ext');
 
 // keyframes
@@ -112,6 +113,7 @@
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
+  -webkit-font-smoothing: antialiased;
 }
 
 *,
